Add Action, Menu, Role, Address to domain model, also add repository tier